--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "seed": "node scripts/seed.js",
+    "backfill": "node scripts/backfill.js",
+    "migrate": "node scripts/migrate.js",
+    "health-check": "node scripts/health-check.js",
+    "reset-db": "node scripts/reset-db.js"
   },
   "keywords": [],
   "author": "",
@@ -17,12 +21,15 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
+    "pino": "^10.3.0",
+    "pino-http": "^11.0.0",
     "prisma": "^6.19.2",
     "zod": "^4.3.6"
   },
@@ -33,6 +40,7 @@
     "eslint": "^9.39.2",
     "globals": "^17.3.0",
     "nodemon": "^3.1.11",
+    "pino-pretty": "^13.1.3",
     "prettier": "^3.8.1"
   }
 }
