--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.3",
     "pino": "^10.3.0",
     "pino-http": "^11.0.0",
     "prisma": "^6.19.2",
